[NO TICKETS] update app name and bundle identifier

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>MEDReport AI</title>
+    <title>MedReport AI GEN</title>
 
     <base href="/" />
 
@@ -20,7 +20,7 @@
 
     <!-- add to homescreen for ios -->
     <meta name="apple-mobile-web-app-capable" content="yes" />
-    <meta name="apple-mobile-web-app-title" content="MEDReport AI" />
+    <meta name="apple-mobile-web-app-title" content="MedReport AI GEN" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
 
     <meta name="mobile-web-app-capable" content="yes" />
